[gd_scene load_steps=5 format=3 uid="uid://dr6w6t2qv7atg"]

[ext_resource type="Script" uid="uid://d4nnyh3h5l7bl" path="res://Scripts/World/world.gd" id="1_a02cp"]
[ext_resource type="Script" uid="uid://yyjkgbfe6jg5" path="res://Scripts/World/BrainModel/SelfBrain.gd" id="3_5ukr8"]
[ext_resource type="Script" uid="uid://53rs4mt5chvi" path="res://Scripts/World/entity_spawner.gd" id="3_fo5ed"]
[ext_resource type="Script" uid="uid://bbt2pnjpjtcwn" path="res://Scenes/World/chunk_loader.gd" id="3_vadfg"]

[node name="World" type="Node2D" node_paths=PackedStringArray("entity_spawner", "chunk_loader")]
script = ExtResource("1_a02cp")
entity_spawner = NodePath("EntitySpawner")
chunk_loader = NodePath("ChunkLoader")
metadata/_custom_type_script = "uid://d4nnyh3h5l7bl"

[node name="SelfBrain" type="Node" parent="."]
script = ExtResource("3_5ukr8")
metadata/_custom_type_script = "uid://yyjkgbfe6jg5"

[node name="ChunkLoader" type="Node2D" parent="."]
script = ExtResource("3_vadfg")
metadata/_custom_type_script = "uid://bbt2pnjpjtcwn"

[node name="EntitySpawner" type="Node2D" parent="." node_paths=PackedStringArray("self_brain")]
script = ExtResource("3_fo5ed")
self_brain = NodePath("../SelfBrain")
metadata/_custom_type_script = "uid://53rs4mt5chvi"

[connection signal="world_item_dropped" from="ChunkLoader" to="EntitySpawner" method="on_world_item_dropped"]
